generator client {
  provider = "prisma-client-js"
}

generator erd {
  provider                  = "prisma-erd-generator"
  output                    = "../docs/erd.md"
  includeRelationFromFields = true
}

datasource db {
  provider = "mysql"
}

// ─── Enums ───────────────────────────────────────────────────────────────────

enum Role {
  ADMIN
  STUDENT_TUTOR
  STUDENT_LEARNER
}

enum AccountStatus {
  ACTIVE
  SUSPENDED
  BANNED
  PENDING // Awaiting admin approval (when requireRegistrationApproval is on); cannot log in
  DECLINED // Registration rejected by an admin; cannot log in. Distinct from BANNED (which is a policy action on an active account).
}

enum GradeLevel {
  GRADE_7
  GRADE_8
  GRADE_9
  GRADE_10
  GRADE_11
  GRADE_12
}

enum TopicCertificationStatus {
  PENDING // Assessment requested, not yet graded
  CERTIFIED // Tutor passed the topic assessment
  REJECTED // Assessment reviewed and not passed; tutor may re-request
}

// SubjectArea enum removed 2026-09-04 — subjects are now the admin-editable
// `Subject` table; the `subject` columns store `Subject.slug` as a plain string.

enum ClassStatus {
  SCHEDULED
  COMPLETED
  CANCELLED
  SUSPENDED
  BANNED
}

enum ClassAppealStatus {
  PENDING // Filed by the tutor, awaiting admin review
  APPROVED // Admin agreed — the class was reinstated to SCHEDULED
  REJECTED // Admin upheld the moderation
}

enum SessionStatus {
  SCHEDULED
  COMPLETED
  CANCELLED
}

enum TopicRequestStatus {
  OPEN // Awaiting a tutor response
  ACCEPTED // A tutor created a class for this request; learner not yet enrolled
  ENROLLED // The learner enrolled in the created class
  FULFILLED // The created class was completed
  CANCELLED // Withdrawn by the learner or closed by an admin
}

enum AssessmentAttemptStatus {
  IN_PROGRESS // Served to the tutor, not yet submitted
  PASSED // Submitted, score >= passPercent
  FAILED // Submitted, score < passPercent
}

enum QuestionRequestStatus {
  OPEN // Tutor asked admin to add questions for a topic
  RESOLVED // Admin added questions / handled it
  DISMISSED // Admin declined
}

enum QuestionOrigin {
  BANK // Admin-authored, shared question bank (feeds certification quizzes)
  TUTOR // Authored by a tutor for their own session tests only
}

enum SessionTestStatus {
  DRAFT // Tutor is still building it
  PUBLISHED // Learners can take it
  CLOSED // No further attempts accepted
}

enum SessionTestKind {
  PRE // Taken before the tutoring session
  POST // Taken after the tutoring session
}

enum SessionTestAttemptStatus {
  IN_PROGRESS
  SUBMITTED
}

// ─── User ────────────────────────────────────────────────────────────────────

model User {
  id            String     @id @default(cuid())
  anonymousId   String     @unique // TUT-0001 or STU-0001
  firstName     String
  lastName      String
  email         String     @unique
  password      String // bcrypt hash
  recoveryEmail String? // optional backup address for password recovery
  role          Role
  gradeLevel    GradeLevel
  section       String
  contactInfo   String?
  consentGiven  Boolean    @default(false)

  // Moderation
  status          AccountStatus @default(ACTIVE)
  statusReason    String?       @db.Text
  statusUpdatedAt DateTime?
  statusExpiresAt DateTime? // set when SUSPENDED with a duration; null = indefinite or not suspended

  // Misc
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Tutor-specific
  tutorProfile TutorProfile?

  // Relations
  enrollments         ClassEnrollment[]    @relation("LearnerEnrollments")
  auditLogs           AuditLog[]
  topicRequests       TopicRequest[]       @relation("LearnerTopicRequests")
  passwordResetTokens PasswordResetToken[]

  // Assessment authoring / moderation (ADMIN only in practice)
  authoredQuestions        AssessmentQuestion[] @relation("AuthoredQuestions")
  resolvedQuestionRequests QuestionRequest[]    @relation("ResolvedQuestionRequests")
  reviewedClassAppeals     ClassAppeal[]        @relation("ReviewedClassAppeals")

  notifications Notification[]
  chatbotMisses ChatbotMiss[]

  // Per-session pre/post tests taken as an enrolled learner
  sessionTestAttempts SessionTestAttempt[] @relation("LearnerSessionTestAttempts")

  @@map("users")
}

// ─── Password Reset Token ─────────────────────────────────────────────────────
// One row per issued reset request. Only the SHA-256 hash of the token is stored;
// the raw token lives only in the emailed link. A row is single-use (`usedAt`) and
// time-limited (`expiresAt`).

model PasswordResetToken {
  id        String    @id @default(cuid())
  userId    String
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  tokenHash String    @unique
  expiresAt DateTime
  usedAt    DateTime?
  createdAt DateTime  @default(now())

  @@index([userId])
  @@map("password_reset_tokens")
}

// ─── Tutor Profile ────────────────────────────────────────────────────────────

model TutorProfile {
  id     String @id @default(cuid())
  userId String @unique
  user   User   @relation(fields: [userId], references: [id])

  // Per-topic assessment requests/certifications, requested once a tutor is teaching a topic
  topicCertifications TopicCertification[]

  // Classes created by this tutor
  classes TutorClass[]

  // Quiz attempts and "please add questions" requests
  assessmentAttempts AssessmentAttempt[]
  questionRequests   QuestionRequest[]

  // Topic requests directed specifically at this tutor
  directedTopicRequests TopicRequest[] @relation("DirectedTopicRequests")

  // Appeals this tutor has filed against class moderation
  classAppeals ClassAppeal[]

  // Custom questions this tutor authored for their session tests
  ownedQuestions AssessmentQuestion[] @relation("OwnedQuestions")

  @@map("tutor_profiles")
}

// Tutor availability is not stored — it is auto-derived at read time from the
// tutor's upcoming ClassSession rows (see src/lib/derivedAvailability.ts).

// ─── Topic Certification (per-topic assessment request/certification) ─────────
// A row only exists once a tutor has requested an assessment for that topic.

model TopicCertification {
  id             String                   @id @default(cuid())
  tutorProfileId String
  tutorProfile   TutorProfile             @relation(fields: [tutorProfileId], references: [id], onDelete: Cascade)
  subject        String // subject slug — was the SubjectArea enum (see src/lib/subjects.ts)
  topic          String
  status         TopicCertificationStatus @default(PENDING)
  requestedAt    DateTime                 @default(now())
  certifiedAt    DateTime?
  reviewedAt     DateTime? // set when an admin certifies or rejects
  reviewNote     String?                  @db.Text // admin feedback, primarily for a rejection

  @@unique([tutorProfileId, subject, topic])
  @@map("topic_certifications")
}

// ─── ID Counter (for sequential anonymous IDs) ────────────────────────────────

model IdCounter {
  role  String @id // "TUTOR", "LEARNER", or "CLASS"
  count Int    @default(0)

  @@map("id_counters")
}

// ─── Subject / Topic catalogue (admin-editable taxonomy) ──────────────────────
// The editable source of valid subjects + topics. `Subject.slug` is what the
// `subject` string column on TutorClass / TopicRequest / TopicCertification /
// AssessmentQuestion / AssessmentAttempt / QuestionRequest stores (it was the
// `SubjectArea` enum value). `Topic.name` is stored verbatim on the
// denormalised `topic` string columns of those models' child rows.
// See src/lib/subjects.ts and docs/plans/subject-topic-management.md.

model Subject {
  id        String   @id @default(cuid())
  slug      String   @unique // "MATH" — the value stored in `subject` columns
  name      String   @unique // "Mathematics" — display label
  order     Int      @default(0)
  active    Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  topics Topic[]

  @@map("subjects")
}

model Topic {
  id        String   @id @default(cuid())
  subjectId String
  subject   Subject  @relation(fields: [subjectId], references: [id], onDelete: Cascade)
  name      String
  order     Int      @default(0)
  active    Boolean  @default(true)
  createdAt DateTime @default(now())

  @@unique([subjectId, name])
  @@index([subjectId, active])
  @@map("topics")
}

// ─── Tutor Class ─────────────────────────────────────────────────────────────

model TutorClass {
  id              String       @id @default(cuid())
  code            String       @unique // human-friendly sequential code, "C-0001" (see generateClassCode)
  tutorProfileId  String
  tutorProfile    TutorProfile @relation(fields: [tutorProfileId], references: [id], onDelete: Cascade)
  subject         String // subject slug — was the SubjectArea enum (see src/lib/subjects.ts)
  gradeLevel      GradeLevel? // optional target grade for this class; null = open to any grade
  description     String?      @db.Text
  maxStudents     Int          @default(1) // Support for 1-on-1 or small group tutoring
  building        String? // in-person location, optional and independent of meetingLink
  room            String?
  meetingLink     String?
  published       Boolean      @default(true) // unpublished classes are hidden from learner browsing/enrollment, but keep their sessions/enrollments
  status          ClassStatus  @default(SCHEDULED)
  suspendedReason String?      @db.Text
  suspendedUntil  DateTime? // set when SUSPENDED with a duration; null = indefinite or not suspended
  createdAt       DateTime     @default(now())
  updatedAt       DateTime     @updatedAt

  topics            ClassTopic[]
  sessions          ClassSession[]
  enrollments       ClassEnrollment[]
  fulfilledRequests TopicRequest[]    @relation("FulfilledRequests")
  appeals           ClassAppeal[]

  @@map("tutor_classes")
}

// ─── Class Topic (1 row per subtopic selected for a class) ───────────────────

model ClassTopic {
  id      String     @id @default(cuid())
  classId String
  class   TutorClass @relation(fields: [classId], references: [id], onDelete: Cascade)
  topic   String

  @@unique([classId, topic])
  @@map("class_topics")
}

// ─── Class Session (1 row per individual meeting within a class) ─────────────
// `topic` must be one of the parent class's ClassTopic.topic values —
// enforced in application code, not a DB constraint (see ClassTopic above).

model ClassSession {
  id          String        @id @default(cuid())
  classId     String
  class       TutorClass    @relation(fields: [classId], references: [id], onDelete: Cascade)
  topic       String
  scheduledAt DateTime
  duration    Int // duration in minutes (e.g. 60, 90)
  status      SessionStatus @default(SCHEDULED)
  createdAt   DateTime      @default(now())
  updatedAt   DateTime      @updatedAt

  test SessionTest?

  @@index([classId])
  @@map("class_sessions")
}

// ─── Class Enrollment ────────────────────────────────────────────────────────

model ClassEnrollment {
  id         String     @id @default(cuid())
  classId    String
  class      TutorClass @relation(fields: [classId], references: [id], onDelete: Cascade)
  learnerId  String
  learner    User       @relation("LearnerEnrollments", fields: [learnerId], references: [id], onDelete: Cascade)
  enrolledAt DateTime   @default(now())

  @@unique([classId, learnerId])
  @@map("class_enrollments")
}

// ─── Topic Request (learner-posted demand when no class fits) ─────────────────
// Topics and preferred time slots are child rows (3NF), mirroring ClassTopic and Availability.

model TopicRequest {
  id                     String             @id @default(cuid())
  learnerId              String
  learner                User               @relation("LearnerTopicRequests", fields: [learnerId], references: [id], onDelete: Cascade)
  subject                String // subject slug — was the SubjectArea enum (see src/lib/subjects.ts)
  gradeLevel             GradeLevel
  note                   String?            @db.Text
  status                 TopicRequestStatus @default(OPEN)
  fulfilledClassId       String?
  fulfilledClass         TutorClass?        @relation("FulfilledRequests", fields: [fulfilledClassId], references: [id], onDelete: SetNull)
  directedTutorProfileId String?
  directedTutor          TutorProfile?      @relation("DirectedTopicRequests", fields: [directedTutorProfileId], references: [id], onDelete: SetNull)
  createdAt              DateTime           @default(now())
  updatedAt              DateTime           @updatedAt

  topics TopicRequestTopic[]
  slots  TopicRequestSlot[]

  @@index([status, subject])
  @@index([directedTutorProfileId, status])
  @@map("topic_requests")
}

model TopicRequestTopic {
  id        String       @id @default(cuid())
  requestId String
  request   TopicRequest @relation(fields: [requestId], references: [id], onDelete: Cascade)
  topic     String

  @@unique([requestId, topic])
  @@map("topic_request_topics")
}

model TopicRequestSlot {
  id        String       @id @default(cuid())
  requestId String
  request   TopicRequest @relation(fields: [requestId], references: [id], onDelete: Cascade)
  day       String // "MONDAY".."SUNDAY", same convention as Availability
  startTime String // "HH:MM" 24h
  endTime   String

  @@map("topic_request_slots")
}

// ─── Audit Log (admin moderation action history) ──────────────────────────────

model AuditLog {
  id         String   @id @default(cuid())
  adminId    String
  admin      User     @relation(fields: [adminId], references: [id])
  action     String
  targetType String
  targetId   String
  reason     String?  @db.Text
  createdAt  DateTime @default(now())

  @@map("audit_logs")
}

// ─── Platform Setting (admin-configurable boolean flags) ──────────────────────

model PlatformSetting {
  key       String   @id
  value     String
  updatedAt DateTime @updatedAt

  @@map("platform_settings")
}

// ─── Assessment Question Bank ────────────────────────────────────────────────
// Admin-authored single-answer multiple-choice questions, one bank per
// (subject, topic). `topic` values come from src/lib/subjectTopics.ts.
// A question referenced by any AssessmentAttemptItem is never hard-deleted;
// it is soft-retired via `active = false` and its content becomes immutable.

model AssessmentQuestion {
  id                  String         @id @default(cuid())
  subject             String // subject slug — was the SubjectArea enum (see src/lib/subjects.ts)
  topic               String
  prompt              String         @db.Text
  explanation         String?        @db.Text // shown to the tutor after grading
  active              Boolean        @default(true)
  origin              QuestionOrigin @default(BANK) // BANK questions feed certification quizzes; TUTOR questions are for session tests only
  createdById         String
  createdBy           User           @relation("AuthoredQuestions", fields: [createdById], references: [id])
  // Set only for `origin = TUTOR`: the tutor who owns this custom question.
  ownerTutorProfileId String?
  ownerTutorProfile   TutorProfile?  @relation("OwnedQuestions", fields: [ownerTutorProfileId], references: [id], onDelete: Cascade)
  createdAt           DateTime       @default(now())
  updatedAt           DateTime       @updatedAt

  options          AssessmentOption[]
  attemptItems     AssessmentAttemptItem[]
  sessionTestLinks SessionTestQuestion[]
  sessionTestItems SessionTestAttemptItem[]

  // `origin` is appended LAST so every pre-existing (subject) / (subject, topic) /
  // (subject, topic, active) query still resolves on a usable prefix.
  @@index([subject, topic, active, origin])
  @@index([ownerTutorProfileId])
  @@map("assessment_questions")
}

model AssessmentOption {
  id         String             @id @default(cuid())
  questionId String
  question   AssessmentQuestion @relation(fields: [questionId], references: [id], onDelete: Cascade)
  text       String             @db.Text
  isCorrect  Boolean            @default(false)
  position   Int // 0-based display order

  selectedInItems       AssessmentAttemptItem[]  @relation("SelectedOption")
  sessionTestSelections SessionTestAttemptItem[] @relation("SessionTestSelectedOption")

  @@unique([questionId, position])
  @@map("assessment_options")
}

// ─── Assessment config ─────────────────────────────────────────────────────
// One platform-wide set of assessment settings (questionCount / passPercent /
// minBankSize), stored as `PlatformSetting` rows and read via
// `getAssessmentConfig()` in src/lib/settings.ts. The old per-(subject, topic)
// `TopicAssessmentConfig` model was dropped 2026-09-03 — see
// docs/plans/global-assessment-config.md.

// ─── Assessment Attempt (one quiz run) ──────────────────────────────────────

model AssessmentAttempt {
  id             String                  @id @default(cuid())
  tutorProfileId String
  tutorProfile   TutorProfile            @relation(fields: [tutorProfileId], references: [id], onDelete: Cascade)
  subject        String // subject slug — was the SubjectArea enum (see src/lib/subjects.ts)
  topic          String
  attemptNo      Int // 1-based, per (tutorProfile, subject, topic)
  status         AssessmentAttemptStatus @default(IN_PROGRESS)
  questionCount  Int // number of items served
  correctCount   Int                     @default(0)
  scorePercent   Int                     @default(0)
  passPercent    Int // threshold snapshot at start
  startedAt      DateTime                @default(now())
  submittedAt    DateTime?

  items AssessmentAttemptItem[]

  @@unique([tutorProfileId, subject, topic, attemptNo])
  @@index([tutorProfileId, subject, topic])
  @@index([status])
  @@map("assessment_attempts")
}

model AssessmentAttemptItem {
  id               String             @id @default(cuid())
  attemptId        String
  attempt          AssessmentAttempt  @relation(fields: [attemptId], references: [id], onDelete: Cascade)
  questionId       String
  question         AssessmentQuestion @relation(fields: [questionId], references: [id])
  position         Int // order within the attempt
  selectedOptionId String?
  selectedOption   AssessmentOption?  @relation("SelectedOption", fields: [selectedOptionId], references: [id], onDelete: SetNull)
  isCorrect        Boolean? // null until graded

  @@unique([attemptId, position])
  @@unique([attemptId, questionId])
  @@map("assessment_attempt_items")
}

// ─── Question Request (tutor asks admin to add questions for a topic) ────────

model QuestionRequest {
  id             String                @id @default(cuid())
  tutorProfileId String
  tutorProfile   TutorProfile          @relation(fields: [tutorProfileId], references: [id], onDelete: Cascade)
  subject        String // subject slug — was the SubjectArea enum (see src/lib/subjects.ts)
  topic          String
  note           String?               @db.Text
  status         QuestionRequestStatus @default(OPEN)
  resolvedById   String?
  resolvedBy     User?                 @relation("ResolvedQuestionRequests", fields: [resolvedById], references: [id], onDelete: SetNull)
  resolvedAt     DateTime?
  resolutionNote String?               @db.Text
  createdAt      DateTime              @default(now())
  updatedAt      DateTime              @updatedAt

  @@unique([tutorProfileId, subject, topic])
  @@index([status, subject])
  @@map("question_requests")
}

// ─── Notification (per-user, DB-backed) ────────────────────────────────────

model Notification {
  id        String    @id @default(cuid())
  userId    String
  user      User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  type      String // free-text; valid values are the NotificationType union in src/lib/notifications.ts
  //           (TOPIC_REQUEST_*, REGISTRATION_*, CERTIFICATION_*, QUESTION_REQUEST_*, CLASS_ENROLLMENT_*, CLASS_CANCELLED, CLASS_COMPLETED, CLASS_APPEAL_*)
  message   String    @db.Text
  link      String?
  readAt    DateTime?
  createdAt DateTime  @default(now())

  @@index([userId, readAt])
  @@map("notifications")
}

// ─── Chatbot Miss (unmatched assistant queries, for growing the FAQ) ────────
// One row per message the intent classifier could not confidently match.
// Read straight from the table for now — no admin UI in v1.

model ChatbotMiss {
  id        String   @id @default(cuid())
  message   String   @db.Text
  role      Role
  userId    String?
  user      User?    @relation(fields: [userId], references: [id], onDelete: SetNull)
  createdAt DateTime @default(now())

  @@index([createdAt])
  @@map("chatbot_misses")
}

// ─── Class Appeal (tutor contests a suspension/ban) ────────────────────────

model ClassAppeal {
  id             String            @id @default(cuid())
  classId        String
  class          TutorClass        @relation(fields: [classId], references: [id], onDelete: Cascade)
  tutorProfileId String
  tutorProfile   TutorProfile      @relation(fields: [tutorProfileId], references: [id], onDelete: Cascade)
  reason         String            @db.Text
  status         ClassAppealStatus @default(PENDING)
  reviewNote     String?           @db.Text // admin's note to the tutor on the decision
  reviewedById   String?
  reviewedBy     User?             @relation("ReviewedClassAppeals", fields: [reviewedById], references: [id], onDelete: SetNull)
  reviewedAt     DateTime?
  createdAt      DateTime          @default(now())

  @@index([status, createdAt])
  @@index([classId])
  @@map("class_appeals")
}

// ─── Per-Session Pre/Post Test ──────────────────────────────────────────────
// A tutor builds ONE ordered question set per ClassSession. It is served twice:
// once as a PRE attempt (before the session) and once as a POST attempt (after).
// `kind` therefore lives on the ATTEMPT, not on the test — so `position` refers
// to the same question in both runs, which is what makes per-question pre-vs-post
// comparison and same-row delta possible. Diagnostic only; no pass mark.
// Editable only while DRAFT and with zero attempts (see docs/plans/pre-test-post-test-plan.md).

model SessionTest {
  id           String            @id @default(cuid())
  sessionId    String            @unique
  session      ClassSession      @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  title        String
  instructions String?           @db.Text
  status       SessionTestStatus @default(DRAFT)
  publishedAt  DateTime?
  closedAt     DateTime?
  createdAt    DateTime          @default(now())
  updatedAt    DateTime          @updatedAt

  questions SessionTestQuestion[]
  attempts  SessionTestAttempt[]

  @@index([status])
  @@map("session_tests")
}

model SessionTestQuestion {
  id            String             @id @default(cuid())
  sessionTestId String
  sessionTest   SessionTest        @relation(fields: [sessionTestId], references: [id], onDelete: Cascade)
  questionId    String
  question      AssessmentQuestion @relation(fields: [questionId], references: [id])
  position      Int // 0-based display order, shared by both the PRE and POST run

  @@unique([sessionTestId, position])
  @@unique([sessionTestId, questionId])
  @@map("session_test_questions")
}

model SessionTestAttempt {
  id             String                   @id @default(cuid())
  sessionTestId  String
  sessionTest    SessionTest              @relation(fields: [sessionTestId], references: [id], onDelete: Cascade)
  learnerId      String
  learner        User                     @relation("LearnerSessionTestAttempts", fields: [learnerId], references: [id], onDelete: Cascade)
  kind           SessionTestKind
  status         SessionTestAttemptStatus @default(IN_PROGRESS)
  totalQuestions Int
  correctCount   Int                      @default(0)
  scorePercent   Int                      @default(0)
  startedAt      DateTime                 @default(now())
  submittedAt    DateTime?

  items SessionTestAttemptItem[]

  @@unique([sessionTestId, learnerId, kind]) // one PRE + one POST per learner
  @@index([learnerId, kind])
  @@index([sessionTestId, kind, status])
  @@map("session_test_attempts")
}

model SessionTestAttemptItem {
  id               String             @id @default(cuid())
  attemptId        String
  attempt          SessionTestAttempt @relation(fields: [attemptId], references: [id], onDelete: Cascade)
  questionId       String
  question         AssessmentQuestion @relation(fields: [questionId], references: [id])
  position         Int // the pre/post join key
  selectedOptionId String?
  selectedOption   AssessmentOption?  @relation("SessionTestSelectedOption", fields: [selectedOptionId], references: [id], onDelete: SetNull)
  isCorrect        Boolean?

  @@unique([attemptId, position])
  @@unique([attemptId, questionId])
  @@map("session_test_attempt_items")
}
