---
config:
  layout: elk
---
erDiagram

        Role {
            ADMIN ADMIN
STUDENT_TUTOR STUDENT_TUTOR
STUDENT_LEARNER STUDENT_LEARNER
        }
    


        AccountStatus {
            ACTIVE ACTIVE
SUSPENDED SUSPENDED
BANNED BANNED
PENDING PENDING
DECLINED DECLINED
        }
    


        GradeLevel {
            GRADE_7 GRADE_7
GRADE_8 GRADE_8
GRADE_9 GRADE_9
GRADE_10 GRADE_10
GRADE_11 GRADE_11
GRADE_12 GRADE_12
        }
    


        TopicCertificationStatus {
            PENDING PENDING
CERTIFIED CERTIFIED
REJECTED REJECTED
        }
    


        ClassStatus {
            SCHEDULED SCHEDULED
COMPLETED COMPLETED
CANCELLED CANCELLED
SUSPENDED SUSPENDED
BANNED BANNED
        }
    


        ClassAppealStatus {
            PENDING PENDING
APPROVED APPROVED
REJECTED REJECTED
        }
    


        SessionStatus {
            SCHEDULED SCHEDULED
COMPLETED COMPLETED
CANCELLED CANCELLED
        }
    


        TopicRequestStatus {
            OPEN OPEN
ACCEPTED ACCEPTED
ENROLLED ENROLLED
FULFILLED FULFILLED
CANCELLED CANCELLED
        }
    


        AssessmentAttemptStatus {
            IN_PROGRESS IN_PROGRESS
PASSED PASSED
FAILED FAILED
        }
    


        QuestionRequestStatus {
            OPEN OPEN
RESOLVED RESOLVED
DISMISSED DISMISSED
        }
    


        QuestionOrigin {
            BANK BANK
TUTOR TUTOR
        }
    


        SessionTestStatus {
            DRAFT DRAFT
PUBLISHED PUBLISHED
CLOSED CLOSED
        }
    


        SessionTestKind {
            PRE PRE
POST POST
        }
    


        SessionTestAttemptStatus {
            IN_PROGRESS IN_PROGRESS
SUBMITTED SUBMITTED
        }
    
  "users" {
    String id "key"
    String anonymousId 
    String firstName 
    String lastName 
    String email 
    String password 
    String recoveryEmail "?"
    Role role 
    GradeLevel gradeLevel 
    String section 
    String contactInfo "?"
    Boolean consentGiven 
    AccountStatus status 
    String statusReason "?"
    DateTime statusUpdatedAt "?"
    DateTime statusExpiresAt "?"
    DateTime createdAt 
    DateTime updatedAt 
    }
  

  "password_reset_tokens" {
    String id "key"
    String userId 
    String tokenHash 
    DateTime expiresAt 
    DateTime usedAt "?"
    DateTime createdAt 
    }
  

  "tutor_profiles" {
    String id "key"
    String userId 
    }
  

  "topic_certifications" {
    String id "key"
    String tutorProfileId 
    String subject 
    String topic 
    TopicCertificationStatus status 
    DateTime requestedAt 
    DateTime certifiedAt "?"
    DateTime reviewedAt "?"
    String reviewNote "?"
    }
  

  "id_counters" {
    String role "key"
    Int count 
    }
  

  "subjects" {
    String id "key"
    String slug 
    String name 
    Int order 
    Boolean active 
    DateTime createdAt 
    DateTime updatedAt 
    }
  

  "topics" {
    String id "key"
    String subjectId 
    String name 
    Int order 
    Boolean active 
    DateTime createdAt 
    }
  

  "tutor_classes" {
    String id "key"
    String code 
    String tutorProfileId 
    String subject 
    GradeLevel gradeLevel "?"
    String description "?"
    Int maxStudents 
    String building "?"
    String room "?"
    String meetingLink "?"
    Boolean published 
    ClassStatus status 
    String suspendedReason "?"
    DateTime suspendedUntil "?"
    DateTime createdAt 
    DateTime updatedAt 
    }
  

  "class_topics" {
    String id "key"
    String classId 
    String topic 
    }
  

  "class_sessions" {
    String id "key"
    String classId 
    String topic 
    DateTime scheduledAt 
    Int duration 
    SessionStatus status 
    DateTime createdAt 
    DateTime updatedAt 
    }
  

  "class_enrollments" {
    String id "key"
    String classId 
    String learnerId 
    DateTime enrolledAt 
    }
  

  "topic_requests" {
    String id "key"
    String learnerId 
    String subject 
    GradeLevel gradeLevel 
    String note "?"
    TopicRequestStatus status 
    String fulfilledClassId "?"
    String directedTutorProfileId "?"
    DateTime createdAt 
    DateTime updatedAt 
    }
  

  "topic_request_topics" {
    String id "key"
    String requestId 
    String topic 
    }
  

  "topic_request_slots" {
    String id "key"
    String requestId 
    String day 
    String startTime 
    String endTime 
    }
  

  "audit_logs" {
    String id "key"
    String adminId 
    String action 
    String targetType 
    String targetId 
    String reason "?"
    DateTime createdAt 
    }
  

  "platform_settings" {
    String key "key"
    String value 
    DateTime updatedAt 
    }
  

  "assessment_questions" {
    String id "key"
    String subject 
    String topic 
    String prompt 
    String explanation "?"
    Boolean active 
    QuestionOrigin origin 
    String createdById 
    String ownerTutorProfileId "?"
    DateTime createdAt 
    DateTime updatedAt 
    }
  

  "assessment_options" {
    String id "key"
    String questionId 
    String text 
    Boolean isCorrect 
    Int position 
    }
  

  "assessment_attempts" {
    String id "key"
    String tutorProfileId 
    String subject 
    String topic 
    Int attemptNo 
    AssessmentAttemptStatus status 
    Int questionCount 
    Int correctCount 
    Int scorePercent 
    Int passPercent 
    DateTime startedAt 
    DateTime submittedAt "?"
    }
  

  "assessment_attempt_items" {
    String id "key"
    String attemptId 
    String questionId 
    Int position 
    String selectedOptionId "?"
    Boolean isCorrect "?"
    }
  

  "question_requests" {
    String id "key"
    String tutorProfileId 
    String subject 
    String topic 
    String note "?"
    QuestionRequestStatus status 
    String resolvedById "?"
    DateTime resolvedAt "?"
    String resolutionNote "?"
    DateTime createdAt 
    DateTime updatedAt 
    }
  

  "notifications" {
    String id "key"
    String userId 
    String type 
    String message 
    String link "?"
    DateTime readAt "?"
    DateTime createdAt 
    }
  

  "chatbot_misses" {
    String id "key"
    String message 
    Role role 
    String userId "?"
    DateTime createdAt 
    }
  

  "class_appeals" {
    String id "key"
    String classId 
    String tutorProfileId 
    String reason 
    ClassAppealStatus status 
    String reviewNote "?"
    String reviewedById "?"
    DateTime reviewedAt "?"
    DateTime createdAt 
    }
  

  "session_tests" {
    String id "key"
    String sessionId 
    String title 
    String instructions "?"
    SessionTestStatus status 
    DateTime publishedAt "?"
    DateTime closedAt "?"
    DateTime createdAt 
    DateTime updatedAt 
    }
  

  "session_test_questions" {
    String id "key"
    String sessionTestId 
    String questionId 
    Int position 
    }
  

  "session_test_attempts" {
    String id "key"
    String sessionTestId 
    String learnerId 
    SessionTestKind kind 
    SessionTestAttemptStatus status 
    Int totalQuestions 
    Int correctCount 
    Int scorePercent 
    DateTime startedAt 
    DateTime submittedAt "?"
    }
  

  "session_test_attempt_items" {
    String id "key"
    String attemptId 
    String questionId 
    Int position 
    String selectedOptionId "?"
    Boolean isCorrect "?"
    }
  
    "users" |o--|| "Role" : "enum:role"
    "users" |o--|| "GradeLevel" : "enum:gradeLevel"
    "users" |o--|| "AccountStatus" : "enum:status"
    "password_reset_tokens" }o--|| "users" : "user"
    "tutor_profiles" |o--|| "users" : "user"
    "topic_certifications" }o--|| "tutor_profiles" : "tutorProfile"
    "topic_certifications" |o--|| "TopicCertificationStatus" : "enum:status"
    "topics" }o--|| "subjects" : "subject"
    "tutor_classes" }o--|| "tutor_profiles" : "tutorProfile"
    "tutor_classes" |o--|o "GradeLevel" : "enum:gradeLevel"
    "tutor_classes" |o--|| "ClassStatus" : "enum:status"
    "class_topics" }o--|| "tutor_classes" : "class"
    "class_sessions" }o--|| "tutor_classes" : "class"
    "class_sessions" |o--|| "SessionStatus" : "enum:status"
    "class_enrollments" }o--|| "tutor_classes" : "class"
    "class_enrollments" }o--|| "users" : "learner"
    "topic_requests" }o--|| "users" : "learner"
    "topic_requests" |o--|| "GradeLevel" : "enum:gradeLevel"
    "topic_requests" |o--|| "TopicRequestStatus" : "enum:status"
    "topic_requests" }o--|o "tutor_classes" : "fulfilledClass"
    "topic_requests" }o--|o "tutor_profiles" : "directedTutor"
    "topic_request_topics" }o--|| "topic_requests" : "request"
    "topic_request_slots" }o--|| "topic_requests" : "request"
    "audit_logs" }o--|| "users" : "admin"
    "assessment_questions" |o--|| "QuestionOrigin" : "enum:origin"
    "assessment_questions" }o--|| "users" : "createdBy"
    "assessment_questions" }o--|o "tutor_profiles" : "ownerTutorProfile"
    "assessment_options" }o--|| "assessment_questions" : "question"
    "assessment_attempts" }o--|| "tutor_profiles" : "tutorProfile"
    "assessment_attempts" |o--|| "AssessmentAttemptStatus" : "enum:status"
    "assessment_attempt_items" }o--|| "assessment_attempts" : "attempt"
    "assessment_attempt_items" }o--|| "assessment_questions" : "question"
    "assessment_attempt_items" }o--|o "assessment_options" : "selectedOption"
    "question_requests" }o--|| "tutor_profiles" : "tutorProfile"
    "question_requests" |o--|| "QuestionRequestStatus" : "enum:status"
    "question_requests" }o--|o "users" : "resolvedBy"
    "notifications" }o--|| "users" : "user"
    "chatbot_misses" |o--|| "Role" : "enum:role"
    "chatbot_misses" }o--|o "users" : "user"
    "class_appeals" }o--|| "tutor_classes" : "class"
    "class_appeals" }o--|| "tutor_profiles" : "tutorProfile"
    "class_appeals" |o--|| "ClassAppealStatus" : "enum:status"
    "class_appeals" }o--|o "users" : "reviewedBy"
    "session_tests" |o--|| "class_sessions" : "session"
    "session_tests" |o--|| "SessionTestStatus" : "enum:status"
    "session_test_questions" }o--|| "session_tests" : "sessionTest"
    "session_test_questions" }o--|| "assessment_questions" : "question"
    "session_test_attempts" }o--|| "session_tests" : "sessionTest"
    "session_test_attempts" }o--|| "users" : "learner"
    "session_test_attempts" |o--|| "SessionTestKind" : "enum:kind"
    "session_test_attempts" |o--|| "SessionTestAttemptStatus" : "enum:status"
    "session_test_attempt_items" }o--|| "session_test_attempts" : "attempt"
    "session_test_attempt_items" }o--|| "assessment_questions" : "question"
    "session_test_attempt_items" }o--|o "assessment_options" : "selectedOption"
